Add duration loading and fix ready checks

--- a/[Source]/HowManySeconds.csproj
+++ b/[Source]/HowManySeconds.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="HowManySeconds.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TMSConfig.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
