--- a/[Source]/HowManySeconds.csproj
+++ b/[Source]/HowManySeconds.csproj
@@ -32,9 +32,11 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
       <HintPath>N:\Beyond Home\KSP_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>N:\Beyond Home\KSP_x64_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,12 +46,17 @@
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
       <HintPath>N:\Beyond Home\KSP_x64_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HMSConfig.cs" />
     <Compile Include="HowManySeconds.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TMSConfig.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
