mdb and profiler

--- a/[Source]/HowManySeconds.csproj
+++ b/[Source]/HowManySeconds.csproj
@@ -16,8 +16,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <OutputPath>build\GameData\HowManySeconds\Plugins\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;ENABLE_PROFILER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -56,7 +56,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>"N:\NewDesktop\PDB2MDB\pdb2mdb\pdb2mdb.exe" "E:\GitHub\HowManySeconds\[Source]\build\GameData\HowManySeconds\Plugins\HowManySeconds.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
